--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="buy-button">Comprar</button> </br>
                 <div class="instagram-link">
                     <div class="instagram-logo">
-                        <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                        <a href="https://www.instagram.com/1donjuannn/" target="_blank">
                     <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
@@ -39,7 +39,7 @@
             <button class="buy-button">Comprar</button> </br>
             <div class="instagram-link">
                 <div class="instagram-logo">
-                    <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                    <a href="https://www.instagram.com/gustavooabr._/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
@@ -53,7 +53,7 @@
                 <button class="buy-button">Comprar</button> </br>
                 <div class="instagram-link">
                     <div class="instagram-logo">
-                        <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                        <a href="https://www.instagram.com/arthur_moreira23/" target="_blank">
                     <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
@@ -67,7 +67,7 @@
             <button class="buy-button">Comprar</button> </br>
             <div class="instagram-link">
                 <div class="instagram-logo">
-                    <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                    <a href="https://www.instagram.com/kayky7_/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
@@ -81,7 +81,7 @@
             <button class="buy-button">Comprar</button> </br>
             <div class="instagram-link">
                 <div class="instagram-logo">
-                    <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                    <a href="https://www.instagram.com/abel_cpl/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
@@ -95,7 +95,7 @@
                 <button class="buy-button">Comprar</button> </br>
                 <div class="instagram-link">
                     <div class="instagram-logo">
-                        <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                        <a href="https://www.instagram.com/itielz/" target="_blank">
                     <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
@@ -109,7 +109,7 @@
                     <button class="buy-button">Comprar</button> </br>
                     <div class="instagram-link">
                         <div class="instagram-logo">
-                            <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                            <a href="https://www.instagram.com/_medeirosryan/" target="_blank">
                         <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                     </div>
@@ -123,7 +123,7 @@
                     <button class="buy-button">Comprar</button> </br>
                     <div class="instagram-link">
                         <div class="instagram-logo">
-                            <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                            <a href="https://www.instagram.com/drigzs/" target="_blank">
                         <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                     </div>
@@ -137,7 +137,7 @@
                     <button class="buy-button">Comprar</button> </br>
                     <div class="instagram-link">
                         <div class="instagram-logo">
-                            <a href="https://www.instagram.com/davi.tll/" target="_blank">
+                            <a href="https://www.instagram.com/mrcel_21/" target="_blank">
                         <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                     </div>
